WebRoot/js/zimbraMail/config/style/zm.css
/* ... */
.calendar_time_selection {
	background-color:#ADD6D6;
}

.calendar_heading {
	background-color:#EEEEEE;
	height: 20px;
	border-bottom:1px solid #CCCCCC;
	overflow: hidden;
}
.calendar_heading_year_text {
	padding-top: 4px;
	left: 0;
	position: absolute;
	text-align:center;
	overflow: hidden;
}

.calendar_heading_day {
	white-space: nowrap;
	overflow:hidden;
	text-align:center;
	padding-top: 2px;
	width: 100%;
	height: 100%;
}

.calendar_heading_day-selected {
	background-color: #ADD6D6;
	white-space: nowrap;
	overflow:hidden;
	text-align:center;
	padding-top: 2px;
	width: 100%;
	height: 100%;
}

.calendar_heading_day_today {
	color: red;
	white-space: nowrap;
	overflow:hidden;
	text-align:center;
	padding-top: 2px;
	width: 100%;
	height: 100%;
}

.calendar_heading_day_today-selected {
	color: red;
	background-color: #ADD6D6;
	white-space: nowrap;
	overflow:hidden;
	text-align:center;
	padding-top: 2px;
	width: 100%;
	height: 100%;
}

.calendar_header_allday_separator {
	background-color:#CCCCCC;
	height:3px;
	padding:0px;
	border-top:1px solid #002D96;
	border-bottom:1px solid #002D96;
}

.calendar_day_separator {
	ZZZborder-left: 1px solid #666666;
	background-color: #666666;	
	padding: 0px;
}

.calendar_hour_scroll {
	position:absolute;
	overflow: hidden;
}

.calendar_union_scroll {
	position:absolute;
	overflow: hidden;
}

/* ths is used when we don't want horizontal scroll in the appt grid */
.calendar_body {
	position:absolute;
  	overflow:-moz-scrollbars-vertical;
  	overflow-x:hidden;
  	overflow-y:auto;
}

/* this is used when we want h/v scroll in the appt grid */
.calendar_body_hscroll {
	position:absolute;
	overflow: auto;
}

.calendar_month_body {
	position:relative;
	overflow:hidden;
/*  	overflow auto seems to work in firefox 1.5b2
	overflow:-moz-scrollbars-vertical;
  	overflow:auto;*/
  	overflow-x:hidden;
  	overflow-y:auto;
}

.calendar_grid_body_time_td {
	vertical-align:top;
	text-align:right;
	border:none;
}

.calendar_grid_body_time_text {
	white-space: nowrap;
	padding-right:2px;
	color:#666666;
}

.month_calendar_c0,.month_calendar_c1,.month_calendar_c2,.month_calendar_c3,
.month_calendar_c4,.month_calendar_c5,.month_calendar_c6{ width: 14.7%; }

.calendar_month_table {
	width:100%;
	height:100%;
	border-collapse:collapse;
	table-layout:fixed;
}

.calendar_month_cells_td {
	height:16%;
	border:1px solid #CCCCCC;
	Xborder-left:none;
	Xborder-bottom:none;
	vertical-align:top;
	Xoverflow: hidden;
	overflow: hidden;
	white-space: nowrap;
}

.calendar_month_cells_td-Selected {
	height:16%;
	background-color:#ADD6D6;
	border:1px solid #CCCCCC;
	Xborder-left:none;
	Xborder-bottom:none;
	vertical-align:top;
	overflow: hidden;
	white-space: nowrap;
}

.calendar_month_day_table {
	width:100%;
}

.calendar_month_day_label {
	overflow: hidden;
	white-space: nowrap;
	padding-top:2px;
	padding-right:4px;
	text-align:right;
	font-size:14px;
}

.calendar_month_day_label_today {
	color: red;
	overflow: hidden;
	white-space: nowrap;
	padding-top:2px;
	padding-right:4px;
	text-align:right;
	font-size:14px;
}

.calendar_tooltip_month_day_label {
	overflow: hidden;
	white-space: nowrap;
	text-align:center;
	font-size:14px;
}

.calendar_month_day_label_off_month {
	overflow: hidden;
	white-space: nowrap;
	padding:4px;
	text-align:right;
	font-size:14px;
	color:#AAAAAA;
}

.calendar_month_day_label_off_month_today {
	overflow: hidden;
	white-space: nowrap;
	padding:4px;
	text-align:right;
	font-size:14px;
	color: red;
}

.calendar_month_day_allday {
	height:18px;
}

.calendar_month_day_item_row {

}

.calendar_month_day_item_row-Selected {
	background-color:#ADD6D6;
	/*color: white;*/
}

.calendar_month_day_item_row-Selected .calendar_month_day_item {
	color: white;
}


.calendar_month_day_item LI {
	padding-left:4px;
}


.calendar_month_day_item {
	padding-left:4px;
	overflow: hidden;
	white-space: nowrap;
	color:#2869FF;
	/*color: blue;*/
}

.calendar_month_day_item-dnd {
	padding-left:4px;
	overflow: hidden;
	white-space: nowrap;
	border: 1px solid;
}

.calendar_month_header_month {
	font-size:18px;
	text-align:center;
	background-color:#EEEEEE;
}

.calendar_month_header_cells_text {
	font-size:14px;
	text-align:center;
	padding-top:3px;
	padding-bottom:3px;
	border-bottom:1px solid black;
	background-color:#EEEEEE;
}

.calendar_print_date_header {
  margin-top:5px;
  font-size: 16px;
  font-weight:bold;
  height:22px;
  border-bottom: 2px solid #DDDDDD;
  width:100%;
}
.calendar_print_date_header_weekday {
  font-size: 12px;
  font-weight:normal;
}

.calendar_print_appointment_container {
  position:relative;
  height:60px;
}

.calendar_print_appointment_time {
  position:absolute;
  top:0px;
  left:0px;
  width:140px;
  font-weight:bold;
}

.calendar_print_appointment_name {
  position:absolute;
  top:0px;
  left:140px;
  width:240px;
  height:12px;
  overflow:hidden;
  font-weight:bold;
}

.calendar_print_appointment_notes {
  position:absolute;
  top:12px;
  left:140px;
  width:240px;
  height:40px;
  overflow:hidden;
  font-weight:normal;
}

.calendar_print_appointment_location {
  position:absolute;
  top:0px;
  left:400px;
  width:240px;
  font-weight:bold;
}

/** The cal/appt images are here temporarily **/

.calendar_header_note	 		{	width:10;	height:16;	background-image:url(/zimbra/img/hiRes/calendar/calendar_header_note.gif);	}
.calendar_header_alarm	 		{	width:10;	height:16;	background-image:url(/zimbra/img/hiRes/calendar/calendar_header_alarm.gif);	}
.calendar_header_repeat	 		{	width:10;	height:16;	background-image:url(/zimbra/img/hiRes/calendar/calendar_header_repeat.gif);	}
.menu_light				{	width:8;	height:16;	background-image:url(/zimbra/img/hiRes/other/menu_light.gif);	}

.allday {
        left:0;
        top:0;
        width:100%;
}

.allday td {
	padding:0px;
}

/* filler for a blank all day item row in month view */
.allday_item_filler {
		height:20;
}
/* ... */

